refactor for new gem version

--- a/app/views/welcome/theme.js.erb
+++ b/app/views/welcome/theme.js.erb
@@ -1,2 +1,2 @@
-$("#parts").html("<%= escape_javascript(render partial: 'part', collection: @parts) %>")
+$("#parts").html("<%= escape_javascript(render partial: 'parts') %>")
 $("#class_theme").val("<%= @name_theme %>");
