--- a/app/views/welcome/generate.js.erb
+++ b/app/views/welcome/generate.js.erb
@@ -1,1 +1,2 @@
+$("#parts").html("<%= escape_javascript(render partial: 'parts') %>")
 $("#image").attr({src: "data:image/svg+xml;utf8, <%= raw(@image) %>"});
