--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,34 +9,25 @@
   <h3>Customize your icon!</h3>
   <p>Generate your awesome icons trying several options and click on generate</p>
   
-  <%#= render partial: 'demo/form' %>
-  <%#= render partial: 'demo/example', locals: {example: 1, image: @image1} %>
-  <%#= render partial: 'demo/example', locals: {example: 2, image: @image2} %>
-  <%#= render partial: 'demo/example', locals: {example: 3, image: @image3} %>
+    <%= form_tag(welcome_generate_path, :remote => true) do %>
+      <h4>1. Select a theme</h4>
+      <%= select_tag "theme", options_for_select(RubySvgImageGenerator::THEMES, RubySvgImageGenerator::T_HUMAN_AVATARS), :class => "form-control" %>
+      <br>
 
-  <h4>1. Select a theme</h4>
+      <h4>2. Combine the differents options</h4>
 
-  <%= form_tag(welcome_theme_path, :remote => true) do %>
-    <%= select_tag "theme", options_for_select(RubySvgImageGenerator::THEMES), :class => "form-control" %>
-  <% end %>
-
-  <br>
-
-  <h4>2. Combine the differents options</h4>
-
-  <div class="row">
-    <div class="col-xs-6 text-center">
-      <%= image_tag "data:image/svg+xml;utf8, #{raw(@image)}", width: "200px", id: 'image', class: 'img-responsive' %>
-    </div>
-    
-    <div class="col-xs-6">
-      <%= form_tag(welcome_generate_path, :remote => true) do %>
-        <%= hidden_field_tag 'class_theme' %>
-        <div id="parts">
+      <div class="row">
+        <div class="col-xs-6 text-center">
+          <%= image_tag "data:image/svg+xml;utf8, #{raw(@image)}", width: "200px", id: 'image', class: 'img-responsive' %>
         </div>
-      <% end %>
-    </div>
-  </div>
+        
+        <div class="col-xs-6">
+          <%#= form_tag(welcome_generate_path, :remote => true) do %>
+          <div id="parts">
+          </div>
+        </div>
+      </div>
+    <% end %>
 </div>
 
 <script type="text/javascript">
