--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,30 +9,41 @@
   <h3>Customize your icon!</h3>
   <p>Generate your awesome icons trying several options and click on generate</p>
 
-    <%= form_tag(welcome_generate_path, :remote => true) do %>
-      <h4>1. Select a theme</h4>
-      <%= select_tag "theme", options_for_select(RubySvgImageGenerator::THEMES, RubySvgImageGenerator::T_HUMAN_AVATARS), :class => "form-control" %>
-      <br>
+  <%= form_tag(welcome_generate_path, :remote => true) do %>
+    <h4>1. Select a theme</h4>
+    <%= select_tag "theme", options_for_select(RubySvgImageGenerator::THEMES, RubySvgImageGenerator::T_HUMAN_AVATARS), :class => "form-control" %>
+    <br>
 
-      <h4>2. Combine the differents options</h4>
+    <h4>2. Combine the differents options</h4>
 
-      <div class="row">
-        <div class="col-xs-6 text-center">
-          <%= image_tag "data:image/svg+xml;utf8, #{raw(@image)}", width: "200px", id: 'image', class: 'img-responsive' %>
+    <div class="row">
+      <div class="col-xs-6">
+        <div id="parts">
+          <%= render partial: 'parts' %>
         </div>
 
-        <div class="col-xs-6">
-          <%#= form_tag(welcome_generate_path, :remote => true) do %>
-          <div id="parts">
-            <%= render partial: 'parts' %>
-          </div>
-        </div>
+        <button id="random" type="button" class="btn btn-info">Random</button>
       </div>
-    <% end %>
+      
+      <div class="col-xs-6 text-center">
+        <%= image_tag "data:image/svg+xml;utf8, #{raw(@image)}", width: "200px", id: 'image', class: 'img-responsive' %>
+      </div>
+    </div>
+  <% end %>
 </div>
 
 <script type="text/javascript">
   $("#theme").change(function(){
-    $(this).closest("form").submit();
+    $.ajax({
+      url: "<%= welcome_theme_change_path %>",
+      data: {theme: $(this).val()},
+      success: function(data) {
+        eval(data);
+      }
+    });
+  });
+
+  $("#random").click(function(){
+    $("#theme").trigger("change");
   });
 </script>
